--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -11977,10 +11977,39 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/*Barra de Navegación*/
+.navbar-brand img {
+  height: 40px;
+  margin-right: 15px;
+}
+
+.navbar-nav {
+  align-items: center;
+}
+
+@media (min-width: 992px) {
+  .navbar .search-box {
+    flex-grow: 1;
+    margin: 0 15px;
+  }
+  .search-box .form-control {
+    width: 100%;
+  }
+}
+.navbar-nav .nav-item .nav-link {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-nav .nav-item .nav-link img {
+  margin-right: 5px;
+}
+
 .d-flex {
   background-color: #474646;
 }
 
+/**/
 .logo {
   width: 100%;
   height: 60px;
@@ -11997,18 +12026,47 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@media (min-width: 1516px) {
+  .marcas2 {
+    margin-left: -321px;
+  }
+  .marcas3 {
+    margin-left: -321px;
+  }
+  .marcas4 {
+    margin-left: -315px;
+  }
+}
 @media (max-width: 1515px) and (min-width: 1310px) {
-  .marcas1, .marcas2, .marcas3, .marcas4 {
-    padding: 10px;
+  .marcas2 {
+    margin-left: -259px;
+  }
+  .marcas3 {
+    margin-left: -260px;
+  }
+  .marcas4 {
+    margin-left: -259px;
   }
 }
 @media (max-width: 1309px) and (min-width: 1170px) {
-  .marcas1, .marcas2, .marcas3, .marcas4 {
-    padding: 15px;
+  .marcas2 {
+    margin-left: -223px;
+  }
+  .marcas3 {
+    margin-left: -224px;
+  }
+  .marcas4 {
+    margin-left: -221px;
   }
 }
 @media (max-width: 1170px) and (min-width: 990px) {
-  .marcas1, .marcas2, .marcas3, .marcas4 {
-    padding: 26px;
+  .marcas2 {
+    margin-left: -223px;
+  }
+  .marcas3 {
+    margin-left: -224px;
+  }
+  .marcas4 {
+    margin-left: -221px;
   }
 }/*# sourceMappingURL=style.css.map */
