--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,20 @@
 /*Import Bootstrap*/
-@import '../bootstrap-5.3.2/scss/bootstrap.scss'; 
+@import '../bootstrap-5.3.2/scss/bootstrap.scss';
 
 /*Barra de Navegación*/
 
+.negocios {
+    width: 100%;
+    background-color: #0179B8;
+}
+
+.img-corbata{
+    width: 100%;
+    height: 500px;
+}
 
 .navbar-brand img {
-    height: 40px; 
+    height: 40px;
     margin-right: 15px;
 }
 
@@ -15,11 +24,12 @@
 }
 
 
-@media (min-width: 992px) { 
+@media (min-width: 992px) {
     .navbar .search-box {
         flex-grow: 1;
-        margin: 0 15px; 
+        margin: 0 15px;
     }
+
     .search-box .form-control {
         width: 100%;
     }
@@ -35,86 +45,85 @@
     margin-right: 5px;
 }
 
-.d-flex{
+.d-flex {
     background-color: #474646;
 }
 
 /**/
 
-.logo{
+.logo {
     width: 100%;
     height: 60px;
 }
-.ping{
+
+.ping {
     width: 40px;
     height: 40px;
 }
 
 /*@media query banner*/
 
-@media (max-width:993px){
-    .banner{display: none !important;}
-} 
+@media (max-width:993px) {
+    .banner {
+        display: none !important;
+    }
+}
 
-@media (min-width:1516px){
-    .marcas2{
+@media (min-width:1516px) {
+    .marcas2 {
         margin-left: -321px;
     }
-    .marcas3{
+
+    .marcas3 {
         margin-left: -321px;
     }
 
-    .marcas4{
+    .marcas4 {
         margin-left: -315px;
     }
 }
 
 
-@media (max-width:1515px) and (min-width:1310px){
-    .marcas2{
+@media (max-width:1515px) and (min-width:1310px) {
+    .marcas2 {
         margin-left: -259px;
     }
-    .marcas3{
+
+    .marcas3 {
         margin-left: -260px;
     }
 
-    .marcas4{
+    .marcas4 {
         margin-left: -259px;
     }
 }
 
-@media (max-width:1309px) and (min-width:1170px){
-    .marcas2{
+@media (max-width:1309px) and (min-width:1170px) {
+    .marcas2 {
         margin-left: -223px
     }
-    .marcas3{
+
+    .marcas3 {
         margin-left: -224px;
     }
 
-    .marcas4{
+    .marcas4 {
         margin-left: -221px;
     }
 }
 
 
-@media (max-width:1170px) and (min-width:990px){
-    .marcas2{
+@media (max-width:1170px) and (min-width:990px) {
+    .marcas2 {
         margin-left: -223px
     }
-    .marcas3{
+
+    .marcas3 {
         margin-left: -224px;
     }
 
-    .marcas4{
+    .marcas4 {
         margin-left: -221px;
     }
 }
- 
-
-
-
-
-
-
-
 
